--- a/Gesture_Control_1/Gesture_Control_Hand_Mode.csproj
+++ b/Gesture_Control_1/Gesture_Control_Hand_Mode.csproj
@@ -40,6 +40,9 @@
     <Reference Include="Intel.RealSense.hand.cs">
       <HintPath>C:\Program Files (x86)\Intel\RSSDK\bin\x64\Intel.RealSense.hand.cs.dll</HintPath>
     </Reference>
+    <Reference Include="Intel.RealSense.HandCursor.cs">
+      <HintPath>C:\Program Files (x86)\Intel\RSSDK\bin\x64\Intel.RealSense.HandCursor.cs.dll</HintPath>
+    </Reference>
     <Reference Include="Sample.DX">
       <HintPath>C:\Program Files (x86)\Intel\RSSDK\bin\x64\Sample.DX.dll</HintPath>
     </Reference>
@@ -56,6 +59,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfidenceCalculation.cs" />
+    <Compile Include="Cursor_Module.cs" />
     <Compile Include="event_args.cs" />
     <Compile Include="Hand_Module.cs" />
     <Compile Include="MainForm.cs">
@@ -68,6 +73,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Streams.cs" />
+    <Compile Include="FPSTimer.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
